[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/props/Trampoline.png" type="Texture" id=1]
[ext_resource path="res://scripts/Trampoline.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.94262
height = 27.9995

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5, 15.5 )

[node name="Trampoline" type="Node2D"]
script = ExtResource( 2 )

[node name="Trampoline" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Trampoline"]
texture = ExtResource( 1 )

[node name="Bounce" type="CollisionShape2D" parent="Trampoline"]
rotation = 1.5752
shape = SubResource( 1 )

[node name="StopBounce" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopBounce"]
position = Vector2( -0.5, 8.5 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Trampoline" to="." method="_on_Trampoline_body_entered"]
[connection signal="body_entered" from="StopBounce" to="." method="_on_StopBounce_body_entered"]
[connection signal="body_exited" from="StopBounce" to="." method="_on_StopBounce_body_exited"]
